--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "blog",
   "dependencies": {
     "requirejs": "*",
-    "jquery": ">= 1.10.2",
+    "jquery": "~1.10.2",
     "less": "~1.5.1",
     "codemirror": "~3.20.0"
   }
