add Article module and markdown module

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "requirejs": "*",
     "jquery": "~1.10.2",
     "less": "~1.5.1",
-    "codemirror": "~3.20.0"
+    "codemirror": "~3.20.0",
+    "marked": "~0.3.0"
   }
 }
