--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "mongoose": "~3.8.3",
     "jade": "~1.0.0",
     "tracer": "~0.6.1",
-    "connect-mongo": "~0.4.0"
+    "connect-mongo": "~0.4.0",
+    "passport": "~0.1.18",
+    "passport-local": "~0.1.6",
+    "passport-baidu": "0.0.1",
+    "underscore": "~1.5.2"
   },
   "scripts": {
     "start": "node app/server/app"
