--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "passport": "~0.1.18",
     "passport-local": "~0.1.6",
     "passport-baidu": "0.0.1",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "fs-extra": "~0.8.1"
   },
   "scripts": {
     "start": "node app/server/app"
