--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "less": "~1.5.1",
     "codemirror": "~3.20.0",
     "marked": "~0.3.0",
-    "angular-resource": "~1.2.12"
+    "angular-resource": "~1.2.12",
+    "angular-bootstrap": "~0.10.0",
+    "bootstrap": "~3.1.0"
   }
 }
