--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "marked": "~0.3.0",
     "angular-resource": "~1.2.12",
     "angular-bootstrap": "~0.10.0",
-    "bootstrap": "~3.1.0"
+    "bootstrap": "~3.1.0",
+    "angular-route": "~1.2.13"
   }
 }
