--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
 bower_components/
-app/dist
-app/server/database.development
-app/server/database.production
-app/server/email.json
+dist
+database.development
+server/database.production
+server/email.json
 cache/
 npm-debug.log
