--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "enen",
   "description": "",
+  "main": "server.js",
   "version": "0.0.1",
   "dependencies": {
     "express": "~3.4.7",
