--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "underscore": "~1.5.2",
     "fs-extra": "~0.8.1"
   },
+  "scripts": {
+    "start": "node server"
+  },
   "licenses": [
     {
       "type": "MIT",
