--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "start": "node server",
-    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt"
+    "install": "./node_modules/bower/bin/bower install",
+    "postinstall": "./node_modules/grunt-cli/bin/grunt"
   },
   "licenses": [
     {
