--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-resource": "~1.2.12",
     "angular-bootstrap": "~0.10.0",
     "bootstrap": "~3.1.0",
-    "angular-route": "~1.2.13"
+    "angular-route": "~1.2.13",
+    "jquery.nicescroll": "*"
   }
 }
