add edit for github gist

--- a/package.json
+++ b/package.json
@@ -34,5 +34,7 @@
       "url": "http://mit-license.org"
     }
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "node-inspector": "~0.7.1"
+  }
 }
