--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-bootstrap": "~0.10.0",
     "bootstrap": "~3.1.0",
     "angular-route": "~1.2.13",
-    "jquery.nicescroll": "*"
+    "jquery.nicescroll": "*",
+    "tweenjs": "*"
   }
 }
