--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,6 @@
     "bootstrap": "~3.1.0",
     "angular-route": "~1.2.13",
     "jquery.nicescroll": "*",
-    "tweenjs": "*"
+    "angular-sanitize": "~1.2.16"
   }
 }
