--- a/package.json
+++ b/package.json
@@ -4,28 +4,33 @@
   "main": "server.js",
   "version": "0.0.1",
   "dependencies": {
-    "express": "~3.4.7",
-    "mongoose": "~3.8.3",
-    "jade": "~1.0.0",
-    "tracer": "~0.6.1",
-    "connect-mongo": "~0.4.0",
-    "passport": "~0.1.18",
-    "passport-local": "~0.1.6",
-    "passport-baidu": "0.0.1",
-    "underscore": "~1.5.2",
-    "fs-extra": "~0.8.1",
+    "body-parser": "^1.0.2",
     "bower": "*",
-    "grunt-cli": "*",
-    "grunt": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-requirejs": "*",
-    "grunt-contrib-less": "~0.8.3",
-    "passport-github": "~0.1.5",
+    "compression": "~1.0.2",
+    "connect-mongo": "~0.4.1",
+    "cookie-parser": "~1.0.1",
+    "express": "~4.1.1",
+    "express-session": "~1.0.4",
+    "fs-extra": "~0.8.1",
     "github-api": "~0.7.0",
     "gravatar": "~1.0.6",
+    "grunt": "*",
+    "grunt-cli": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-less": "~0.8.3",
+    "grunt-contrib-requirejs": "*",
+    "grunt-contrib-uglify": "*",
+    "jade": "~1.0.0",
+    "mkdirp": "~0.3.5",
+    "mongoose": "~3.8.3",
+    "morgan": "^1.0.1",
+    "passport": "~0.1.18",
+    "passport-baidu": "0.0.1",
+    "passport-github": "~0.1.5",
+    "passport-local": "~0.1.6",
     "request": "~2.34.0",
-    "mkdirp": "~0.3.5"
+    "tracer": "~0.6.1",
+    "underscore": "~1.5.2"
   },
   "scripts": {
     "start": "node server",
